--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Page Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="./lib/index.css" rel="stylesheet"/>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">
+    <wstl-search 
+      v-model="inputText"
+      :panel="true" 
+      :list="searchList" 
+      @select="value => inputText = value"/>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+  <script src="./lib/wstl-ui.common.js"></script>
+  <script>
+    new Vue({
+      el: '#app',
+      data: {
+        inputText: '',
+        searchList: [
+          '1231',
+          '测试时'
+        ]
+      }
+    })
+  </script>
 </body>
 </html>
